# ak-file

./: README.md  pyproject.toml
.github/workflows/: test.yml
ak_file/: __init__.py  main.py  sanitize.py  sanitizer.py  search.py
tests/: test_main.py  test_sanitize.py  test_search.py
