[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_file"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
requires-python = ">=3.11.0"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "cryptography>=41.0.3"
]

[project.optional-dependencies]
test = [
    "pytest"
]

dev = [
    "ipykernel",
    "icecream"
]

[project.urls]
Home = "https://github.com/rpakishore/ak-file"
